--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
     <div id="app">
 
+        {{timerImage}}
+
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
-                <div class="item">
+                <div class="item" >
                     <img :src="slides[imageIndex].image" alt="Spiderman" />
                     <div class="text">
                         <h3>{{ slides[imageIndex].title }}</h3>
+                        <h2></h2>
                         <p>
                             {{ slides[imageIndex].text }}
                         </p>
